--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>selenium-java</artifactId>
             <version>2.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.2</version>
+        </dependency>
     </dependencies>
 </project>
